tests/miniJava/neg/004471_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( extends int [] java ) { return 0 ; } }
